--- a/style.css
+++ b/style.css
@@ -230,16 +230,31 @@ h5{
     justify-content: center;
 	align-items: center;
 }
-.row{
+.col{
     color: seashell;
     display: inline-block;
     position: relative;
     padding: 50px  50px;
     max-width: 30%;
 }
-.row ul li{
+.col ul li{
     list-style-type: square;
 }
+@media screen and (min-width: 550px) {  
+    #Container{width: 100%; height: fit-content; text-align:center; }   
+    .col ul{list-style-type:square; width:100%;height:100%;margin:0; padding:0;display:inline-block;}
+    .col ul li{width:auto;height:fit-content; margin:0; padding:5% 5%;}
+}
+ /*
+ @media screen and (min-width: 900px) {  
+   html, body{margin:0}
+    #Container{width:100%;height:100px; text-align:center;}   
+    .col ul{list-style:none; width:100%;height:100%;        margin:0; padding:0;}
+    .col ul li{width:10.75%;height:100%; display:inline-block; margin:0;      padding:0;}
+    .col ul li:first-child{margin:0;float:left}
+    .col ul li:last-child{margin:0;}
+    .col ul li + .col ul li{margin-left:2%; float:right}
+   }*/
 h5{
 	color: seashell;
 	font-size: 23px;
