School images are added and scrolling animations created

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 	margin: 0;
 	font-family: 'Josefin Sans', sans-serif;
 	box-sizing: border-box;
+	scroll-behavior: smooth;
 }
 header {
     position: sticky;
@@ -79,6 +80,19 @@ nav ul li a:hover{
 	left:8%;
 	transform: translateY(-50%);
 }
+.slide-left{
+	animation: slideleft 1s linear forwards;
+}
+@keyframes slideleft{
+	0%{
+		transform: translate(70px);
+		opacity: 0;
+	}
+	100%{
+		transform: translate(0px);
+		opacity: 1;
+	}
+}
 .content a{
     color: navy;
     text-decoration:solid;
@@ -108,6 +122,17 @@ h4{
 	width: 100%;
 	padding: 100px 0px;
 	background-color: #191919;
+}
+.appear{
+	animation: slideleft 2s linear forwards;
+}
+@keyframes appear{
+	0%{
+		opacity: 0;
+	}
+	100%{
+		opacity: 1;
+	}
 }
 .about img{
 	height: auto;
@@ -184,6 +209,11 @@ span2{
 	margin: 15px 0px;
 	color: #2500f9;
 
+}
+.card img{
+	height: auto;
+	width: 80px;
+	padding-bottom: 10px;
 }
 .pra p{
 	color: seashell;
