--- a/style.css
+++ b/style.css
@@ -191,6 +191,13 @@ span2{
 	width: 80px;
 	padding-bottom: 10px;
 }
+.img2 img{
+	height: auto;
+	width: 120px;
+	padding-bottom: 10px;
+	padding-top: 5px;
+	border-radius: 15px;
+}
 .pra p{
 	color: seashell;
 	font-size: 16px;
